--- a/css/style.css
+++ b/css/style.css
@@ -190,11 +190,11 @@ footer .welcome{
     color: white;
     font-size: 16px;
 }
-.footer-content p{
-    font-family: 'Chivo Mono', monospace;
-}
 .about-dev h5{
     font-family: 'Roboto Condensed', sans-serif;
+}
+.footer-content small{
+    font-family: 'Chivo Mono', monospace;
 }
 
 /* // X-Small devices (portrait phones, less than 576px)
